--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tokio-mockstream"
-version = "1.1.1"
+version = "1.1.2"
 description = "A fake stream for testing network applications backed by buffers."
 authors = ["Aaron Weiss <awe@pdgn.co>"]
 license = "MIT/Apache-2.0"
@@ -11,7 +11,7 @@ edition = "2018"
 
 [dependencies]
 tokio = "0.2.0-alpha.4"
-futures-preview = "=0.3.0-alpha.18"
+futures-preview = "0.3.0-alpha.19"
 
 [dev-dependencies]
 bytes = "0.4"
